# anomaly-detection-nasa-ts

./: .gitignore  README.md
anomaly-detection-nasa-ts/: pyproject.toml
anomaly-detection-nasa-ts/reports/firstweek/: firstweek.md
anomaly-detection-nasa-ts/scripts/: explore_anomalies.py  generate_mask.py
applied-ml-security-bootcamp/: main.py  pyproject.toml
applied-ml-security-bootcamp/reports/firstweek/: firstweek.md
applied-ml-security-bootcamp/scripts/: inspect_series.py
